# fuzz

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  create-pr.yml
include/fuzz/: fuzz.h
src/fuzz/: fuzz.c
test/src/: main.c
